--- a/_posts/2014-10-01-en-prj-play-1.markdown
+++ b/_posts/2014-10-01-en-prj-play-1.markdown
@@ -1,6 +1,6 @@
 ---
 layout: en/project
-title:  "Pathfinder"
+title:  "Explorer"
 subtitle: "The world is different when seen through the eye of a robot."
 excerpt: "This challenge is about explore a mysterious world, draw a map of it, with only the images that CoderBot sends us."
 splash: mars_700x300.jpg
@@ -11,24 +11,23 @@ author: CoderBot
 language: en
 ---
 ### Description
-Il mondo è diverso visto da un robot. Specialmente se il robot ha un occhio solo, che guarda sempre avanti e in basso.
-In questo gioco dovremo cercare di orientarci in un ambiente sconosciuto, ricostruendone una mappa, avendo a disposizione solo le immagini che arrivano dal robot.
+The world is different when observed by a robot. Especially if the robot has only one eye, looking forward towards the ground.
+In this game, the robot will be our "explorer" in an unknown space. We, as the rover pilot, will try to draw a map of the space relying only on the images that the rover sends us. 
 
 ![Mars]({{ site.baseurl }}/img/mars_1140x300.jpg)
 
 ### Requisites
-- Un ambiente isolato da quello dove ci troviamo (ad esempio la stanza o la classe a fianco)
-- Alcuni fogli di carta, matita e gomma
+A space isolated from the rover pilot (two adjacent rooms, such as two classes or one class and a corridor)
+Paper and pencil
 
 ### Preparation
-Ci si dispone in due gruppi: il primo prepara l'ambiente da esplorare in modo che sia sufficientemente complicato da esplorare ma percorribile per il robot.
-I due gruppi scelgono alcuni oggetti con forma e colore ben distinti, definiti "tesori". Questi oggetti saranno posti nella stanza da esplorare e la loro identificazione e ubicazione costituirà l'obiettivo del gioco.
-Ad esempio, si possono predisporre degli ostacoli con dei libri, scatole, oggetti vari che si trovano nella stanza, ma in posizioni diverse da quelle solite.
-Il secondo gruppo si trova in una stanza vicina ma non deve assolutamente avere modo di osservare la prima, 
-A questo punto il robot viene posto, acceso, all'interno della stanza e il gioco comincia.
+Participants are split in two groups, the first one "builders" prepare the "unknown space", the second one drive the rover and explore the space.
+The two groups agree on a set of special, known objects with special value defined as "treasures". These objects will be placed in the unknown space and the finding and correct placement in the map will count as points for the "exploring" team.
+All "treasures" must be placed such that they are reachable by the robot, it is not allowed to create "traps" (places where the robot can enter but not leave).
+The "explorers" group will stay on place with no direct view on the "unknown space".
 
 ### The game
-Il secondo gruppo pilota il robot e cerca di orientarsi e ricostruire una mappa dell'ambiente e di trovare i "tesori" e la loro posizione sulla mappa.
-Il gioco finisce dopo un tempo prestabilito, o quando tutti i tesori sono stati trovati e il gruppo degli Esploratori decide che la mappa è completa
-Valutazione e premi
-Terminato il gioco, si valuta la mappa rispetto alla reale conformazione della stanza, 1 punto per ogni ostacolo correttamente tracciato e 5 per ogni tesoro trovato e correttamente posizionato.
+The "builders" place the robot in the "unknown space", when ready the game starts. 
+The "explorers" drive the robots through the space, trying to draw a map and to find all the "treasures". The team will have a limited amount of time to explore the area.
+The game end when all treasures have been found and the team is satisfied with the accuracy of the map, or when the time finish.
+The explorers gets more points for each treasure found in the correct position on the map.
